# rusty-tools

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  system.txt
proc_macro_crate/: Cargo.toml
proc_macro_crate/src/: lib.rs
src/: assistant.rs  main.rs  tool_function.rs  tool_registry.rs  traits.rs  types.rs  utils.rs
src/api/: openai_service.rs
src/assistant/: command_handler.rs  conversation_manager.rs  mod.rs
src/models/: traits.rs
src/registry/: tool_registry.rs
src/tools/: file_tool.rs  gpt_tool.rs  mod.rs  pipeline_tool.rs  shell_tool.rs  snap_tool.rs
src/utils/: common.rs
