[package]
name = "rtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
clap = "3.0.0"
crossterm = "0.27.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
log = "0.4.17"
simplelog = "0.11.0"
chrono = "0.4.31"
async-recursion = "1.0.5"
